--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/cron/guild-rankings",
-      "schedule": "0 0 * * 0"
-    },
-    {
-      "path": "/api/cron/leaderboard-refresh",
-      "schedule": "0 */6 * * *"
-    },
-    {
-      "path": "/api/cron/challenge-check",
+      "path": "/api/cron/master",
       "schedule": "0 * * * *"
-    },
-    {
-      "path": "/api/cron/cleanup-parties",
-      "schedule": "0 */2 * * *"
     }
   ]
 }
